=======
CHANGES
=======

1.3.2 (unreleased)
------------------

- Nothing changed yet.


1.3.1 (2010-03-24)
------------------

- Resource libraries that are required during a retried request are now
  correctly registered and injected to the HTML.

- Import hooks functionality from zope.component after it was moved there from
  zope.site. This lifts the dependency on zope.site.

- Removed an unused ISite import and thereby, the undeclared dependency on
  zope.location.


1.3.0 (2009-10-08)
------------------

- Use ``zope.browserresource`` instead of ``zope.app.publisher``, removing
  a dependency on latter.

- Look up the "resources view" via queryMultiAdapter instead of looking into
  the adapter registry.

- Moved the dependency on zope.site to the test dependencies.

1.2.0 (2009-06-04)
------------------

- Use ``zope.site`` instead of ``zope.app.component``.  Removes direct
  dependency on ``zope.app.component``.

1.1.0 (2009-05-05)
------------------

New features:

- An attempt to generate resource URLs using the "resources view" (@@)
  is now made; if unsuccesful, we fall back to the previous method of
  crafting the URL by hand from the site url. This ensures that the
  resource library respects the existing plugging points for resource
  publishing (see ``zope.app.publisher.browser.resources``).

- You can now explicitly specify where resource links should be
  inserted using the special marker comment '<!-- zc.resourcelibrary -->'.

1.0.2 (2009-01-27)
------------------

- Remove zope.app.zapi from dependencies, substituting
  its uses with direct imports.

- Use zope-dev at zope.org mailing list address instead of
  zope3-dev at zope.org as the latter one is retired.

- Change "cheeseshop" to "pypi" in the package homepage.

1.0.1 (2008-03-07)
------------------

Bugs fixed:

- added the behavior from the standard Zope 3 response to guess that a body
  that is not HTML without an explicit mimetype should have a