@@ -60,6 +60,7 @@ setup(name='zc.resourcelibrary',
                 'zope.testing',
                 ]),
       install_requires=['setuptools',
+                        'zope.app.pagetemplate',
                         'zope.app.publication',
                         'zope.browserresource',
                         'zope.component',
