@@ -16,8 +16,7 @@ $Id: publication.py 4528 2005-12-23 02:45:25Z gary $
 """
 from zope import interface
 from zope.app.publication.interfaces import IBrowserRequestFactory
-from zope.browserresource.resource import Resource
-from zope.component import queryMultiAdapter, getMultiAdapter, getSiteManager
+from zope.component import queryMultiAdapter, getMultiAdapter
 from zope.publisher.browser import BrowserRequest, BrowserResponse
 from zope.publisher.browser import isHTML
 from zope.publisher.interfaces.browser import IBrowserPublisher
@@ -51,7 +50,7 @@ class Request(BrowserRequest):
         False
         >>> request.resource_libraries is retry_request.resource_libraries
         True
-        
+
         The assigned libraries are flushed because a new request will define
         its own set of required librarires.
 
@@ -142,7 +141,7 @@ class Response(BrowserResponse):
             resources = None
             base = queryMultiAdapter(
                 (site, self._request), IAbsoluteURL, name="resource")
-            if base is None: 
+            if base is None:
                 baseURL = str(getMultiAdapter(
                     (site, self._request), IAbsoluteURL))
             else:
@@ -177,7 +176,7 @@ class Response(BrowserResponse):
                                        'include this file: "%s"' % file_name)
 
         return '\n    '.join(html)
-    
+
     def _addDependencies(self, resource_libraries):
         result = []
         def add_lib(lib):
@@ -189,7 +188,8 @@ class Response(BrowserResponse):
                 raise RuntimeError('Unknown resource library: "%s"' % lib)
             for other in required:
                 add_lib(other)
-            result.append(lib)
+            if zc.resourcelibrary.getIncluded(lib):
+                result.append(lib)
         for lib in resource_libraries:
             add_lib(lib)
         return result
