@@ -22,7 +22,6 @@ from zope.configuration import xmlconfig
 import zope.interface
 from zope.pagetemplate import pagetemplate
 import zope.publisher.interfaces.browser
-from zope.testing import doctest
 import doctest
 import os
 import unittest
@@ -44,7 +43,7 @@ class TestFactory:
 
     def __getitem__(self, name):
         return lambda: "http://localhost/@@/%s/%s" % (self.name, name)
-    
+
     def publishTraverse(self, request, name):
         return getattr(self, name.replace('.', '_'))
 
@@ -107,7 +106,7 @@ def test_empty_body():
     """
     If a response body is not html, guess that it is text/plain.  This
     follows the behavior of zope.publication's trunk as of this writing.
-    
+
     >>> import zc.resourcelibrary.publication
     >>> response = zc.resourcelibrary.publication.Response()
     >>> response.setResult('')
